# mime-rs

./: .gitignore  Cargo.toml  Makefile  README.md  failure-output.org  plan.org  todo.org  todo.org_archive
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: parallel_index.rs
docs/: agent-feedback.md  clients.md  mcp-tools.md  porting-from-mime.md  vocabulary.md
examples/: delete-trailing-whitespace.tl  markers-viewport.tl  regexp-replace-count.tl  rename-symbol.tl  transactional-edit.tl  uppercase.tl
src/: buffer.rs  builtins.rs  cli.rs  coding.rs  conflict.rs  daemon.rs  engine.rs  help.rs  http.rs  lib.rs  mcp.rs  quire.rs  regex_dialect.rs  result.rs  safety.rs  sequencer.rs  store.rs  strings.rs  syntax.rs  tui.rs  tui_step.rs
tests/: commands.rs  mcp.rs
