[package]
name = "mime-rs"
description = "A scriptable, transactional text-editing engine driven by Emacs-Lisp (tulisp) programs — for automation and AI agents."
version = "0.1.0"
repository = "https://github.com/shsms/mime-rs"
license = "GPL-3.0-only"
edition = "2024"
rust-version = "1.88.0"
readme = "README.md"
keywords = ["text-editor", "lisp", "tulisp", "agent", "mcp"]
categories = ["text-editors", "command-line-utilities", "text-processing"]
exclude = ["*.org"]

[dependencies]
regex = "1.12.3"
serde_json = "1.0.150"
similar = "3.1.1"
tulisp = { version = "0.29.0", features = ["big_functions"] }
# M7 structural editing. tree-sitter-md's block tree exposes `section`/
# `heading` nodes — the natural top-level "defun" analog for prose, mime-rs's
# home turf; tree-sitter-rust/-python cover the code mime-rs's agent users
# edit most. The grammars compile C (via `cc`, needs a host C toolchain);
# md's `parser` feature pulls in the C runtime.
tree-sitter = "0.26"
tree-sitter-md = { version = "0.5", features = ["parser"] }
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
