[package]
name = "mime-rs"
description = "A scriptable, transactional text-editing engine driven by Emacs-Lisp (tulisp) programs — for automation and AI agents."
version = "0.1.0"
repository = "https://github.com/shsms/mime-rs"
license = "GPL-3.0-only"
edition = "2024"
rust-version = "1.88.0"
readme = "README.md"
keywords = ["text-editor", "lisp", "tulisp", "agent", "mcp"]
categories = ["text-editors", "command-line-utilities", "text-processing"]
exclude = ["*.org"]

[dependencies]
regex = "1.12.3"
serde_json = "1.0.150"
similar = "3.1.1"
tulisp = { version = "0.29.0", features = ["big_functions"] }
# M7 structural editing. The html/js/css/toml/yaml/elisp grammars round out
# the agent-facing set; elisp also parses mime's own .tl scripts. (An org
# grammar was evaluated and dropped: the published crate pins tree-sitter
# 0.20, whose runtime symbols collide with 0.26's.)
# tree-sitter-md's block tree exposes `section`/
# `heading` nodes — the natural top-level "defun" analog for prose, mime-rs's
# home turf; tree-sitter-rust/-python cover the code mime-rs's agent users
# edit most. The grammars compile C (via `cc`, needs a host C toolchain);
# md's `parser` feature pulls in the C runtime.
tree-sitter = "0.26"
tree-sitter-md = { version = "0.5", features = ["parser"] }
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-css = "0.25.0"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-yaml = "0.7.2"
tree-sitter-elisp = "1.6.1"
